Fixed alignment problem with buttons

--- a/client/src/styles/components/SharingComponent.scss
+++ b/client/src/styles/components/SharingComponent.scss
@@ -12,9 +12,16 @@
     list-style-type: none;
     
     > li.button {
+      
       padding: 0;
       font-size: 0;
       margin: 0 $spacer-half $spacer-half 0;
+      
+      > .sharingbutton {
+        display: inline-block;
+        vertical-align: top;
+      }
+      
     }
     
     &.vertical {
